# dungeon-venture

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GameEditor  GameEditorTest  Main  Makefile  README.md  build.sh  run_editor.sh
editor/: CMakeLists.txt  Editor.cpp
editor/res/shaders/: default.frag  default.vert  grid.vert  grid_shader.frag  grid_shader.geom  grid_shader.vert  line.frag  line.geom  line.vert  line_vertex.frag  line_vertex.vert  phantom_vertex.vert
editor/src/: Editor.cpp  EditorApp.cpp  EditorApp.h  EditorLayer.cpp  EditorLayer.h  Grid.cpp  Grid.h  Selectable.h  SelectionManager.h  SelectionManger.cpp  Wall.cpp  Wall.h
editor/src/map_components/: Line.h  LineVertex.h  Sector.h  Side.h
editor/src/utils/: macros.h
engine/: CMakeLists.txt
engine/src/: Engine.h
engine/src/camera/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h
engine/src/core/: Application.cpp  Application.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  Layer.cpp  Layer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h
engine/src/events/: ApplicationEvent.h  Event.cpp  Event.h  KeyEvent.h  MouseEvent.h
engine/src/graphics/: CustomAttributeLayout.cpp  CustomAttributeLayout.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
engine/src/utils/: EngineDebug.h  debug.h
src/: cursor.cpp  cursor.hpp  editor.cpp  editor.hpp  editorfilewriter.cpp  editorfilewriter.hpp  editorkeyevent.cpp  editorkeyevent.hpp  game.cpp  game.hpp  gamekeyevent.hpp  grid.cpp  grid.hpp  gridobject.cpp  gridobject.hpp  keyevent.hpp  main.cpp  mapdata.hpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp  vertex.cpp  vertex.hpp  vertexgraph.cpp  vertexgraph.hpp  vertextree.cpp  vertextree.hpp  wall.cpp  wall.hpp  walltree.cpp  walltree.hpp  window.cpp  window.hpp
(+3 files in other folders)
